src/index.css
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-color: #1A2730;
}

a{
  text-decoration: none;
}

header{
  position: sticky;
  top: 0;
  z-index: 5;
}

.navbar{
  background-color: #424048;
  padding: 0px;
}

.logo-design{
  width: 80px;
}

.btn-color{
  background-color: #E95D2C;
}

.herospace{
    background-image: url("./assets/herospace.png");
    background-repeat: no-repeat;
    background-size: cover;
    background-color: #1A2730;
}

.carousel-inner{
  border-radius: 10px;
}

.publisher-videogame-text{
  font-size: 15px;
}

main{
  color: white;
}



/* ////////////////////////////////////
////////////SEARCHPAGE////////////// */

.page-title {
  font-size: 3rem;
  font-weight: 700;
  color: hsl(120, 41%, 25%);
  margin-bottom: 30px;
  text-transform: uppercase;
  letter-spacing: 3px;
  text-align: center;
}

.search-form {
  max-width: 500px;
  margin: 0 auto 40px auto;
  display: flex;
  gap: 15px;
}

.search-input {
  flex-grow: 1;
  padding: 12px 18px;
  border-radius: 12px;
  border: none;
  font-size: 1rem;
  font-weight: 500;
  background-color: lab(16.05% -0.2 -0.82);
  color: #fff;
  box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.6);
}

.search-input::placeholder {
  color: #6c757d;
}

.search-input:focus {
  outline: none;
  box-shadow: 0 0 12px #3ed24b;
}

.btn-search {
  background-color: #d32f2f;
  border: none;
  color: #fff;
  font-weight: 700;
  padding: 12px 28px;
  border-radius: 12px;
  text-transform: uppercase;
  cursor: pointer;
  box-shadow: 0 4px 12px rgba(211, 47, 47, 0.7);
  transition: background-color 0.3s ease;
}

.btn-search:hover {
  background-color: #a52727;
}

.card-instant {
  max-width: 420px;
  background: #23272b;
  border-radius: 18px;
  box-shadow: 0 6px 32px 0 rgba(0, 0, 0, 0.25), 0 1.5px 4px 0 rgba(0, 0, 0, 0.08);
  overflow: hidden;
  transition: transform 0.15s, box-shadow 0.15s;
  margin-bottom: 32px;
  border: none;
  color: #fff;
  position: relative;
  margin: 16px auto;
}

.card-instant:hover {
  transform: translateY(-6px) scale(1.02);
  box-shadow: 0 15px 50px 0 rgba(0, 0, 0, 0.35), 0 10px 10px 0 rgba(0, 0, 0, 0.12);
}

.card-instant-img {
  width: 100%;
  height: 100%;
  object-fit: contain;
  display: block;
}

.card-instant-body {
  padding: 18px 22px 16px 22px;
}

.card-instant-title {
  font-size: 1.4rem;
  font-weight: 700;
  margin-bottom: 8px;
  color: #fff;
}
.card-instant-price {
  font-size: 1.25rem;
  font-weight: 700;
  color: #3ed24b;
  margin-bottom: 10px;
}

.card-instant-publisher {
  font-size: 0.9rem;
  color: #b6b6b6;
  margin-bottom: 6px;
}

.card-instant-badges {
  margin-bottom: 8px;
}

.badge-genre,
.badge-platform {
  display: inline-block;
  background: #31363b;
  color: #ffa600;
  font-size: 0.85rem;
  font-weight: 500;
  border-radius: 12px;
  padding: 3px 10px;
  margin-right: 6px;
  margin-bottom: 4px;
}

.badge-platform {
  color: #3ed24b;
  background: #23272b;
  border: 1px solid #3ed24b;
}

